<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/greaterButton"
        android:layout_width="105dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="195dp"
        android:text="@string/greaterButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equalButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.883"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="195dp"
        android:text="@string/equalButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lesserButton"
        app:layout_constraintStart_toEndOf="@+id/greaterButton"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.885" />

    <Button
        android:id="@+id/lesserButton"
        android:layout_width="116dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="195dp"
        android:text="@string/lesserButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.883"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="276dp"
        android:gravity="center"
        android:text="@string/textview1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="276dp"
        android:gravity="center"
        android:text="@string/textview2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultId"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:layout_marginBottom="108dp"
        android:gravity="center"
        android:text="@string/resultText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timerId"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:layout_centerInParent="true"
        android:text="@string/timerView"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/equalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

</androidx.constraintlayout.widget.ConstraintLayout>